Адаптивные сетки, резина первой страницы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -56,30 +56,32 @@
         забыть о политике и экономике.</h2>
     </div>
     <div class="content__block-card">
-      <div class="content__card content__card__title card">
-        <img class="card__image" src="img/card-1-mobile.svg" alt="Народные просторы. Дорога, уходящая в закат.">
+      <div class="content__card card">
+        <img class="card__image__title" src="img/card-1-mobile.svg" alt="Народные просторы. Дорога, уходящая в закат.">
         <h2 class="card__content">Автор фото: Борис</h2>
         <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
         <h3 class="card__total-likes">1350</h3>
       </div>
-      <div class="content__card card">
-        <img class="card__image" src="img/card-2-mobile.svg" alt="Местная растительность. Кактус на фоне каньона.">
-        <h2 class="card__content">Автор фото: Сергей</h2>
-        <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
-        <h3 class="card__total-likes">143</h3>
-      </div>
-      <div class="content__card card">
-        <img class="card__image" src="img/card-3-mobile.svg"
-          alt="Дорога на север. Серпантиновая дорога среди горного леса.">
-        <h2 class="card__content">Автор фото: Петр</h2>
-        <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
-        <h3 class="card__total-likes">96</h3>
-      </div>
-      <div class="content__card card">
-        <img class="card__image" src="img/card-4-mobile.svg" alt="Мост Дьявола. Фото каньона и простор.">
-        <h2 class="card__content">Автор фото: Антон</h2>
-        <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
-        <h3 class="card__total-likes">254</h3>
+      <div class="content__card-list">
+        <div class="content__card card">
+          <img class="card__image" src="img/card-2-mobile.svg" alt="Местная растительность. Кактус на фоне каньона.">
+          <h2 class="card__content">Автор фото: Сергей</h2>
+          <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
+          <h3 class="card__total-likes">143</h3>
+        </div>
+        <div class="content__card card">
+          <img class="card__image" src="img/card-3-mobile.svg"
+            alt="Дорога на север. Серпантиновая дорога среди горного леса.">
+          <h2 class="card__content">Автор фото: Петр</h2>
+          <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
+          <h3 class="card__total-likes">96</h3>
+        </div>
+        <div class="content__card card">
+          <img class="card__image" src="img/card-4-mobile.svg" alt="Мост Дьявола. Фото каньона и простор.">
+          <h2 class="card__content">Автор фото: Антон</h2>
+          <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
+          <h3 class="card__total-likes">254</h3>
+        </div>
       </div>
     </div>
     <div class="content__video video">
