--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,24 +5,28 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="icon" href="img/favicons/32.svg">
   <title>HTML Academy: Седона</title>
 </head>
 
 <body class="body">
-  <header class="header">
-    <a class="logo" href="#">
-      <img class="logo" src="img/logo.svg" width="185" height="96" alt="Логотип.">
-    </a>
-    <nav class="nav">
-      <div class="nav__wrapper">
+  <div class="container">
+    <header class="header">
+      <a class="logo" href="index.html">
+        <img class="logo__img" src="img/logo.svg" width="185" height="96" alt="Логотип.">
+      </a>
+      <nav class="nav nav-menu__closed nav__nojs">
+        <button class="nav__button reset-list" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
         <ul class="nav__list site-list">
-          <li class="site-list__item site-list__item__active">
-            <a class="site-list__link" href="#">
+          <li class="site-list__item">
+            <a class="site-list__link site-list__link--active" href="index.html">
               Главная
             </a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">
+            <a class="site-list__link" href="catalog.html">
               Фото и видео
             </a>
           </li>
@@ -37,17 +41,13 @@
             </a>
           </li>
         </ul>
-        <div class="header__toggle">
-          <button class="toggle__button toggle" type="button">
-            <img class="toggle__menu" src="img/icon-menu.svg" alt="Открыть меню.">
-          </button>
-        </div>
-      </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
+    <script src="../source/js/script.js"></script>
+
   <main class="content">
     <div class="intro intro--page-inner">
-      <img class="intro__img" src="img/intro-form.svg"
+      <img class="intro__img" src="img/intro-sedona.svg"
         alt="Welcome yo the gergeous. Sedona. Because the Gtand Canyon sucks!">
     </div>
     <div class="content__title">
@@ -91,12 +91,9 @@
       <img class="video-player" src="/img/video-mobile.svg" alt="Видеоплеер.">
       <img class="video-player__polygon" src="/img/polygon.svg" alt="Запустить плеер.">
     </div>
-    <div class="map">
-      <img class="map__image" src="/img/map-mobile.svg" alt="Карта.">
-      <img class="map__marker" src="/img/map-marker.svg" alt="Маркер на карте.">
-    </div>
   </main>
-  <footer class="footer theme-light reset-list">
+
+  <footer class="footer theme-light">
     <span class="footer__title">#visitSEDONA</span>
     <ul class="footer__socials socials">
       <li class="socials__item"><a class="socials__link" href="#"><span class="visually-hidden">VKontakte</span>
@@ -137,11 +134,15 @@
         </a>
       </li>
     </ul>
-    <a class="footer__academy-logo" href="https://htmlacademy.ru/">Разработано</a>
-    <a class="footer__academy-logo-url" href="https://htmlacademy.ru/"><img class="footer__academy-logo"
-        src="img/htmlacademy.svg" alt="Логотип Академии" width="27" height="34"><span class="visually-hidden">Логотип
-        академии</span></a>
+    <div class="footer__academy">
+      <a class="footer__academy-logo" href="https://htmlacademy.ru/">Разработано</a>
+      <a class="footer__academy-logo-url" href="https://htmlacademy.ru/"><img class="footer__academy-logo"
+          src="img/htmlacademy.svg" alt="Логотип Академии" width="27" height="34"><span
+          class="visually-hidden">Логотип
+          академии.</span></a>
+    </div>
   </footer>
+
 </body>
 
 </html>
