--- a/source/form.html
+++ b/source/form.html
@@ -5,19 +5,24 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="icon" href="img/favicons/32.svg">
   <title>HTML Academy: Седона</title>
 </head>
 
 <body class="body">
-  <header class="header">
-    <a class="logo" href="#">
-      <img class="logo" src="img/logo.svg" width="185" height="96" alt="Логотип.">
-    </a>
-    <nav class="nav">
-      <div class="nav__wrapper">
+  <div class="container">
+
+    <header class="header">
+      <a class="logo" href="index.html">
+        <img class="logo__img" src="img/logo.svg" width="185" height="96" alt="Логотип.">
+      </a>
+      <nav class="nav nav-menu__closed nav__nojs">
+        <button class="nav__button reset-list" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
         <ul class="nav__list site-list">
-          <li class="site-list__item site-list__item__active">
-            <a class="site-list__link" href="#">
+          <li class="site-list__item">
+            <a class="site-list__link site-list__link--active" href="index.html">
               Главная
             </a>
           </li>
@@ -27,7 +32,7 @@
             </a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">
+            <a class="site-list__link" href="form.html">
               Форма отзыва
             </a>
           </li>
@@ -37,135 +42,136 @@
             </a>
           </li>
         </ul>
-        <div class="header__toggle">
-          <button class="toggle__button toggle" type="button">
-            <img class="toggle__menu" src="img/icon-menu.svg" alt="Открыть меню.">
-          </button>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <main class="content">
-    <div class="content__intro-index intro--page-inner">
-      <img class="intro__img-form" src="img/intro-form.svg" alt="Sedona.">
-    </div>
-    <div class="content__title">
-      <h1 class="content__title-head content-head">Оставьте свой отзыв</h1>
-      <h2 class="content-head__sub">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных Вами
-        достопримечательностях</h2>
-    </div>
-    <div class="form__content">
-      <div class="content__user-information">
-        <fieldset class="content__introduce introduce">
-          <h2 class="introduce__title form__title">Представьтесь:</h2>
-          <p class="introduce__description">Имя*:</p>
-          <input class="introduce__text-area" type="text" value="Пётр">
-          <p class="introduce__description">Фамилия*:</p>
-          <input class="introduce__text-area" type="text" value="Пустота">
-          <p class="introduce__description">Отчество:</p>
-          <input class="introduce__text-area" type="text" value="Викторович">
-        </fieldset>
-        <fieldset class="content__information information">
-          <h2 class="information__title form__title">Контактная информация</h2>
-          <p class="information__description">Контактный телефон*:</p>
-          <input class="information__text" type="tel" value="Введите телефон">
-          <img class="information__input-img" src="/img/phone.svg" alt="Иконка телефона">
-          <p class="information__description">Электронная почта*:</p>
-          <input class="information__text" type="tel" value="Введите e-mail">
-          <img class="information__input-img" src="/img/mail.svg" alt="Иконка почты">
-        </fieldset>
-      </div>
-      <div class="content__rating rating">
-        <h2 class="rating__title form__title">Ваше общее впечатление</h2>
-        <input class="rating__radio" type="radio" id="rating__radio-positive" value="Скорее положительное"
-          checked><label for="rating__radio-positive">Скорее положительное</label>
-        <input class="rating__radio" type="radio" id="rating__radio-negative" value="Скорее отрицательное"><label
-          for="rating__radio-negative">Скорее отрицательное</label>
-        <input class="rating__radio" type="radio" id="rating__radio-none" value="Затрудняюсь ответить"><label
-          for="rating__radio-none">Затрудняюсь ответить</label>
-      </div>
-      <div class="content__attraction attraction">
-        <h2 class="attraction__title form__title">Посещенные достопримечательности:</h2>
-        <div class="attraction__check"><span class="visually-hidden">Выбор посещенных
-            достопримечательностей.</span>
-          <input class="attraction__checkbox" type="checkbox" id="devil-bridge" value="Мост Дьявола" checked><label
-            for="devil-bridge">Мост Дьявола</label>
-          <input class="attraction__checkbox" type="checkbox" id="mount-bell" value="Гора-Колокол" checked><label
-            for="mount-bell">Гора-Колокол</label>
-          <input class="attraction__checkbox" type="checkbox" id="slide-park" value="Слайд-парк" checked><label
-            for="slide-park">Слайд парк</label>
-          <input class="attraction__checkbox" type="checkbox" id="red-rocks" value="Красные скалы"><label
-            for="red-rocks">Красные скалы</label>
-        </div>
-      </div>
-      <div class="content__review review">
-        <h2 class="review__title form__title">Опишите свои эмоции:</h2>
-        <textarea class="review__textarea">Опишите подробно все свои восторги</textarea>
-        <button class="review__button" type="button" value="Отправить отзыв">Отправить отзыв</button>
-      </div>
-    </div>
+      </nav>
+    </header>
+    <script src="../source/js/script.js"></script>
 
-  </main>
-  <footer class="footer theme-light">
-    <span class="footer__title">#visitSEDONA</span>
-    <ul class="footer__socials socials">
-      <li class="socials__item"><a class="socials__link" href="#"><span class="visually-hidden">VKontakte</span>
-          <svg class="socials__img" width="48" height="48" viewBox="0 0 48 48" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <rect width="48" height="48" fill="#81B3D2" />
-            <g clip-path="url(#clip0_38006_456)">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M35.45 17.948C35.616 17.402 35.45 17 34.655 17H32.03C31.362 17 31.054 17.347 30.887 17.73C30.887 17.73 29.552 20.926 27.661 23.002C27.049 23.604 26.771 23.795 26.437 23.795C26.27 23.795 26.019 23.604 26.019 23.057V17.948C26.019 17.292 25.835 17 25.279 17H21.151C20.734 17 20.483 17.304 20.483 17.593C20.483 18.214 21.429 18.358 21.526 20.106V23.904C21.526 24.737 21.373 24.888 21.039 24.888C20.149 24.888 17.984 21.677 16.699 18.003C16.45 17.288 16.198 17 15.527 17H12.9C12.15 17 12 17.347 12 17.73C12 18.412 12.89 21.8 16.145 26.281C18.315 29.341 21.37 31 24.153 31C25.822 31 26.028 30.632 26.028 29.997V27.684C26.028 26.947 26.186 26.8 26.715 26.8C27.105 26.8 27.772 26.992 29.33 28.467C31.11 30.216 31.403 31 32.405 31H35.03C35.78 31 36.156 30.632 35.94 29.904C35.702 29.18 34.852 28.129 33.725 26.882C33.113 26.172 32.195 25.407 31.916 25.024C31.527 24.533 31.638 24.314 31.916 23.877C31.916 23.877 35.116 19.451 35.449 17.948H35.45Z"
+    <main class="content">
+      <div class="content__intro-index intro--page-inner">
+        <img class="intro__img-form" src="img/intro-form.svg" alt="Sedona.">
+      </div>
+      <div class="content__title">
+        <h1 class="content__title-head content-head">Оставьте свой отзыв</h1>
+        <h2 class="content-head__sub">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных Вами
+          достопримечательностях</h2>
+      </div>
+      <div class="form__content">
+        <div class="content__user-information">
+          <fieldset class="content__introduce introduce">
+            <h2 class="introduce__title form__title">Представьтесь:</h2>
+            <p class="introduce__description">Имя*:</p>
+            <input class="introduce__text-area" type="text" value="Пётр">
+            <p class="introduce__description">Фамилия*:</p>
+            <input class="introduce__text-area" type="text" value="Пустота">
+            <p class="introduce__description">Отчество:</p>
+            <input class="introduce__text-area" type="text" value="Викторович">
+          </fieldset>
+          <fieldset class="content__information information">
+            <h2 class="information__title form__title">Контактная информация</h2>
+            <p class="information__description">Контактный телефон*:</p>
+            <input class="information__text" type="tel" value="Введите телефон">
+            <img class="information__input-img" src="/img/phone.svg" alt="Иконка телефона">
+            <p class="information__description">Электронная почта*:</p>
+            <input class="information__text" type="tel" value="Введите e-mail">
+            <img class="information__input-img" src="/img/mail.svg" alt="Иконка почты">
+          </fieldset>
+        </div>
+        <div class="content__rating rating">
+          <h2 class="rating__title form__title">Ваше общее впечатление</h2>
+          <input class="rating__radio" type="radio" id="rating__radio-positive" value="Скорее положительное"
+            checked><label for="rating__radio-positive">Скорее положительное</label>
+          <input class="rating__radio" type="radio" id="rating__radio-negative" value="Скорее отрицательное"><label
+            for="rating__radio-negative">Скорее отрицательное</label>
+          <input class="rating__radio" type="radio" id="rating__radio-none" value="Затрудняюсь ответить"><label
+            for="rating__radio-none">Затрудняюсь ответить</label>
+        </div>
+        <div class="content__attraction attraction">
+          <h2 class="attraction__title form__title">Посещенные достопримечательности:</h2>
+          <div class="attraction__check"><span class="visually-hidden">Выбор посещенных
+              достопримечательностей.</span>
+            <input class="attraction__checkbox" type="checkbox" id="devil-bridge" value="Мост Дьявола" checked><label
+              for="devil-bridge">Мост Дьявола</label>
+            <input class="attraction__checkbox" type="checkbox" id="mount-bell" value="Гора-Колокол" checked><label
+              for="mount-bell">Гора-Колокол</label>
+            <input class="attraction__checkbox" type="checkbox" id="slide-park" value="Слайд-парк" checked><label
+              for="slide-park">Слайд парк</label>
+            <input class="attraction__checkbox" type="checkbox" id="red-rocks" value="Красные скалы"><label
+              for="red-rocks">Красные скалы</label>
+          </div>
+        </div>
+        <div class="content__review review">
+          <h2 class="review__title form__title">Опишите свои эмоции:</h2>
+          <textarea class="review__textarea">Опишите подробно все свои восторги</textarea>
+          <button class="review__button" type="button" value="Отправить отзыв">Отправить отзыв</button>
+        </div>
+      </div>
+
+    </main>
+    <footer class="footer theme-light">
+      <span class="footer__title">#visitSEDONA</span>
+      <ul class="footer__socials socials">
+        <li class="socials__item"><a class="socials__link" href="#"><span class="visually-hidden">VKontakte</span>
+            <svg class="socials__img" width="48" height="48" viewBox="0 0 48 48" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <rect width="48" height="48" fill="#81B3D2" />
+              <g clip-path="url(#clip0_38006_456)">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M35.45 17.948C35.616 17.402 35.45 17 34.655 17H32.03C31.362 17 31.054 17.347 30.887 17.73C30.887 17.73 29.552 20.926 27.661 23.002C27.049 23.604 26.771 23.795 26.437 23.795C26.27 23.795 26.019 23.604 26.019 23.057V17.948C26.019 17.292 25.835 17 25.279 17H21.151C20.734 17 20.483 17.304 20.483 17.593C20.483 18.214 21.429 18.358 21.526 20.106V23.904C21.526 24.737 21.373 24.888 21.039 24.888C20.149 24.888 17.984 21.677 16.699 18.003C16.45 17.288 16.198 17 15.527 17H12.9C12.15 17 12 17.347 12 17.73C12 18.412 12.89 21.8 16.145 26.281C18.315 29.341 21.37 31 24.153 31C25.822 31 26.028 30.632 26.028 29.997V27.684C26.028 26.947 26.186 26.8 26.715 26.8C27.105 26.8 27.772 26.992 29.33 28.467C31.11 30.216 31.403 31 32.405 31H35.03C35.78 31 36.156 30.632 35.94 29.904C35.702 29.18 34.852 28.129 33.725 26.882C33.113 26.172 32.195 25.407 31.916 25.024C31.527 24.533 31.638 24.314 31.916 23.877C31.916 23.877 35.116 19.451 35.449 17.948H35.45Z"
+                  fill="white" />
+              </g>
+              <defs>
+                <clipPath id="clip0_38006_456">
+                  <rect width="24" height="24" fill="white" transform="translate(12 12)" />
+                </clipPath>
+              </defs>
+            </svg>
+          </a>
+        </li>
+        <li class="socials__item"><a class="socials__link" href="#"><span class="visually-hidden">Telegram</span>
+            <svg class="socials__img" width="48" height="48" viewBox="0 0 48 48" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <rect width="48" height="48" fill="#81B3D2" />
+              <path
+                d="M34.4393 16.6223L31.2705 31.566C31.0313 32.6205 30.408 32.883 29.5223 32.3865L24.6938 28.8285L22.3643 31.0695C22.1063 31.3275 21.891 31.5428 21.3938 31.5428L21.741 26.6258L30.6893 18.54C31.0785 18.1935 30.6045 18.0008 30.0848 18.348L19.0223 25.314L14.2598 23.823C13.224 23.4998 13.2053 22.7873 14.4758 22.29L33.1035 15.1133C33.966 14.79 34.7205 15.3053 34.4393 16.623V16.6223Z"
                 fill="white" />
-            </g>
-            <defs>
-              <clipPath id="clip0_38006_456">
-                <rect width="24" height="24" fill="white" transform="translate(12 12)" />
-              </clipPath>
-            </defs>
-          </svg>
-        </a>
-      </li>
-      <li class="socials__item"><a class="socials__link" href="#"><span class="visually-hidden">Telegram</span>
-          <svg class="socials__img" width="48" height="48" viewBox="0 0 48 48" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <rect width="48" height="48" fill="#81B3D2" />
-            <path
-              d="M34.4393 16.6223L31.2705 31.566C31.0313 32.6205 30.408 32.883 29.5223 32.3865L24.6938 28.8285L22.3643 31.0695C22.1063 31.3275 21.891 31.5428 21.3938 31.5428L21.741 26.6258L30.6893 18.54C31.0785 18.1935 30.6045 18.0008 30.0848 18.348L19.0223 25.314L14.2598 23.823C13.224 23.4998 13.2053 22.7873 14.4758 22.29L33.1035 15.1133C33.966 14.79 34.7205 15.3053 34.4393 16.623V16.6223Z"
-              fill="white" />
-          </svg>
-        </a>
-      </li>
-      <li class="socials__item"><a class="socials__link" href="#"><span class="visually-hidden">YouTube</span>
-          <svg class="socials__img" width="48" height="48" viewBox="0 0 48 48" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <rect width="48" height="48" fill="#81B3D2" />
-            <path
-              d="M31.1813 17H16.8133C15.3062 17 14 18.3 14 19.8V28.1C14 29.7 15.3062 31 16.8133 31H31.1813C32.7889 31 33.9946 29.7 33.9946 28.2V19.8C34.095 18.3 32.7889 17 31.1813 17ZM21.0333 27.4V20.6L27.8656 24L21.0333 27.4Z"
-              fill="white" />
-          </svg>
-        </a>
-      </li>
-    </ul>
-    <a class="footer__academy-logo" href="https://htmlacademy.ru/">Разработано</a>
-    <a class="footer__academy-logo-url" href="https://htmlacademy.ru/"><img class="footer__academy-logo"
-        src="/img/htmlacademy.svg" alt="Логотип Академии" width="27" height="34"><span class="visually-hidden">Логотип
-        академии</span></a>
-  </footer>
-  <div class="modal">
-    <div class="modal__error modal-error">
-      <h2 class="modal-error__title">Что-то пошло не так!</h2>
-      <h3 class="modal-error__description">Проверьте поля, выделенные красным, скорее всего Вы забыли их заполнить</h3>
-      <button class="modal-error__button button" type="button" value="Ок.">Ок</button>
+            </svg>
+          </a>
+        </li>
+        <li class="socials__item"><a class="socials__link" href="#"><span class="visually-hidden">YouTube</span>
+            <svg class="socials__img" width="48" height="48" viewBox="0 0 48 48" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <rect width="48" height="48" fill="#81B3D2" />
+              <path
+                d="M31.1813 17H16.8133C15.3062 17 14 18.3 14 19.8V28.1C14 29.7 15.3062 31 16.8133 31H31.1813C32.7889 31 33.9946 29.7 33.9946 28.2V19.8C34.095 18.3 32.7889 17 31.1813 17ZM21.0333 27.4V20.6L27.8656 24L21.0333 27.4Z"
+                fill="white" />
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <div class="footer__academy">
+        <a class="footer__academy-logo" href="https://htmlacademy.ru/">Разработано</a>
+        <a class="footer__academy-logo-url" href="https://htmlacademy.ru/"><img class="footer__academy-logo"
+            src="img/htmlacademy.svg" alt="Логотип Академии" width="27" height="34"><span
+            class="visually-hidden">Логотип
+            академии.</span></a>
+      </div>
+    </footer>
+
+    <div class="modal">
+      <div class="modal__error modal-error">
+        <h2 class="modal-error__title">Что-то пошло не так!</h2>
+        <h3 class="modal-error__description">Проверьте поля, выделенные красным, скорее всего Вы забыли их заполнить
+        </h3>
+        <button class="modal-error__button button" type="button" value="Ок.">Ок</button>
+      </div>
+      <div class="modal__succsess modal-success">
+        <h2 class="modal-succsess__title">Ваш отзыв отправлен!</h2>
+        <h3 class="modal-succsess__description">Спасибо за Ваше участие, Ваш отзыв уже поступил к нам. В ближайшее время
+          мы
+          опубликуем его на сайте.</h3>
+        <button class="modal-succsess__button button" type="button" value="Закрыть окно.">Закрыть окно</button>
+      </div>
     </div>
-    <div class="modal__succsess modal-success">
-      <h2 class="modal-succsess__title">Ваш отзыв отправлен!</h2>
-      <h3 class="modal-succsess__description">Спасибо за Ваше участие, Ваш отзыв уже поступил к нам. В ближайшее время
-        мы
-        опубликуем его на сайте.</h3>
-      <button class="modal-succsess__button button" type="button" value="Закрыть окно.">Закрыть окно</button>
-    </div>
-  </div>
 
 </body>
 
